--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ name: Ed Momot
 description: Software Engineer with too many hobbies
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: ed-momot-headshot-140.jpg
 
 #
 # Flags below are optional
