--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ footer-links:
   flickr:
   github: edmomot
   instagram:
-  linkedin:
+  linkedin: ed-momot-475771104
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
